--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.0113-beta" targetFramework="net45" />
-  <package id="CUL.MiniProfiler" version="4.0.0113-beta" targetFramework="net45" />
-  <package id="CUL.NLog" version="4.0.0113-beta" targetFramework="net45" />
-  <package id="CUL.ServiceStack" version="4.0.0113-beta" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.0119-beta" targetFramework="net45" />
+  <package id="CUL.MiniProfiler" version="4.0.0119-beta" targetFramework="net45" />
+  <package id="CUL.NLog" version="4.0.0119-beta" targetFramework="net45" />
+  <package id="CUL.ServiceStack" version="4.0.0119-beta" targetFramework="net45" />
   <package id="dotless" version="1.4.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
@@ -12,24 +12,24 @@
   <package id="Glimpse" version="1.8.4" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.0" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.8.1" targetFramework="net45" />
-  <package id="Glimpse.CUL" version="4.0.0113-beta" targetFramework="net45" />
+  <package id="Glimpse.CUL" version="4.0.0119-beta" targetFramework="net45" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
   <package id="Glimpse.MiniProfiler" version="1.2.4" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.3.0" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.0113-beta" targetFramework="net45" />
-  <package id="Ironman.Core.Assets.Less" version="1.0.0113-beta" targetFramework="net45" />
-  <package id="Ironman.Core.Assets.Yui" version="1.0.0113-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.0119-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.0119-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.0119-beta" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
@@ -42,7 +42,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
@@ -52,7 +52,7 @@
   <package id="Roslyn.Services.Common" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Services.CSharp" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Services.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
-  <package id="ServiceStack.Text" version="4.0.12" targetFramework="net45" />
+  <package id="ServiceStack.Text.Signed" version="4.0.15" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.4.0.0" targetFramework="net45" />
