--- a/Copernicus.Core/packages.config
+++ b/Copernicus.Core/packages.config
@@ -4,12 +4,15 @@
   <package id="CraigsUtilityLibrary" version="4.0.123-beta" targetFramework="net45" />
   <package id="Ironman.Core" version="1.0.123-beta" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
